[package]
name = "ingress-tls"
version = "2026.1.18"
edition = "2024"
description = "Kubernetes AdmissionControl webhook to validate or mutate Ingress/Gateway to ensure it contains TLS setup"
license = "None"
repository = "https://github.com/Magicloud/ingress-tls"
keywords = ["Kubernetes", "Ingress", "TLS"]
categories = ["Kubernetes"]
readme = "README.md"

[lints.clippy]

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "z"
opt-level = 3
panic = "abort"

[dependencies]
mimalloc = { version = "*" }
eyre = { version = "*" }
color-eyre = { version = "*" }
clap = { version = "*", features = ["derive"] }
tracing = { version = "*" }
tracing-error = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
# log = { version = "*" }
# logcall = { version = "*" }
futures = { version = "*" }
smol = { version = "*" }
blocking = { version = "*" }
async-compat = { version = "*" }
k8s-openapi = { version = "0.26.1", features = ["earliest"] }
kube = { version = "2", features = ["admission", "http-proxy"] }
gateway-api = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
serde_json_diff = { version = "*" }
serde_yaml = { version = "*" }
json-patch = { version = "*" }
actix-web = { version = "*", features = ["rustls-0_23"] }
rustls = { version = "*" }
aws-lc-rs = { version = "1.14.1" }
inotify = { version = "*" }
mea = { version = "*" }
itertools = { version = "*" }
ouroboros = { version = "*" }
